# Work_Review

./: CHANGELOG.md  README.en.md  README.md  README.test.js  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-03-27-avatar-intelligence-design.md
scripts/: build-icons.mjs
src/: App.svelte  App.sync.test.js  app.css
src-tauri/: Cargo.toml  screenSelection.test.js  tauri.conf.json  windowResidence.test.js
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_classifier.rs  avatar_engine.rs  commands.rs  config.rs  database.rs  main.rs  monitor.rs  screenshot.rs  work_intelligence.rs
src-tauri/src/analysis/: local.rs  mod.rs  summary.rs
src/lib/components/: AppUsageChart.svelte  ConfirmDialog.svelte  Sidebar.svelte
src/lib/components/Avatar/: AvatarCanvas.svelte  AvatarPopover.svelte  avatarAppearance.js  avatarAppearance.test.js  avatarOutline.js  avatarOutline.test.js  avatarStateMeta.js  avatarStateMeta.test.js  avatarWindow.test.js
src/lib/i18n/: index.js
src/lib/stores/: assistant.js  iconCache.js
src/lib/utils/: appVisuals.js  avatarToggle.js  avatarToggle.test.js
src/routes/: Overview.svelte
src/routes/about/: About.svelte
src/routes/avatar/: AvatarWindow.svelte
src/routes/settings/: Settings.svelte  SettingsClassification.test.js  SettingsStorageCapture.test.js
src/routes/settings/components/: SettingsAI.svelte  SettingsAppearance.svelte  SettingsGeneral.svelte  SettingsStorage.svelte
src/routes/timeline/: Timeline.category.test.js  Timeline.svelte  TimelineScreenshotMode.test.js
