[package]
name = "work-review"
version = "1.0.5"

description = "个人工作回顾与AI日报助手"
authors = ["WorkReview Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = { version = "2" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 数据库
rusqlite = { version = "0.30", features = ["bundled"] }
base64 = "0.21"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 正则表达式
regex = "1.10"

# 日志
log = "0.4"
env_logger = "0.10"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# 其他
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
dirs = "5.0"
image = "0.25.9"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# 平台特定依赖 - Windows
[target.'cfg(windows)'.dependencies]
windows-capture = "1.5"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "tlhelp32", "psapi", "handleapi", "winnt", "winbase", "sysinfoapi", "wingdi", "libloaderapi"] }

# 平台特定依赖 - macOS
[target.'cfg(target_os = "macos")'.dependencies]
screenshots = "0.8"
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

# 编译优化
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
